ajout sharepreference sauvegarde à plus longue durée

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,19 +15,28 @@
         android:id="@+id/plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/notlose"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="82dp"
+        android:layout_marginStart="21dp"
         android:text="Button"
-        android:onClick="plus"/>
+        android:onClick="plus"
+        android:layout_alignBottom="@+id/notlose"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/plus"
-        android:layout_toEndOf="@+id/notlose"
         android:text="reset"
-        android:onClick="reset"/>
+        android:onClick="reset"
+        android:layout_marginLeft="36dp"
+        android:layout_above="@+id/Bar"
+        android:layout_toEndOf="@+id/notlose" />
+
+    <SeekBar
+        android:id="@+id/Bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:layout_below="@+id/plus"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
